fix: fix tooltip arrow height on Firefox for all placement options

--- a/themes/default/scss/primeng/theme.scss
+++ b/themes/default/scss/primeng/theme.scss
@@ -807,6 +807,7 @@ ul.ui-autocomplete-multiple-container.ui-widget.ui-inputtext{
 
 .ng-tooltip::after {
   content: "";
+  height: 0px;
   position: absolute;
   border-style: solid;
 }
@@ -814,7 +815,6 @@ ul.ui-autocomplete-multiple-container.ui-widget.ui-inputtext{
 .ng-tooltip-top::after {
   top: 100%;
   left: 50%;
-  height: 0px;
   margin-left: -5px;
   border-width: 5px;
   border-color: black transparent transparent transparent;
@@ -823,7 +823,6 @@ ul.ui-autocomplete-multiple-container.ui-widget.ui-inputtext{
 .ng-tooltip-bottom::after {
   bottom: 100%;
   left: 50%;
-  height: 0px;
   margin-left: -5px;
   border-width: 5px;
   border-color: transparent transparent black transparent;
